--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,14 +12,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@altv/types-client": "^1.4.6",
-    "@altv/types-natives": "^1.1.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.1.3"
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "builtin-modules": "^3.2.0",
+    "rollup": "^2.39.0",
+    "rollup-plugin-auto-external": "^2.0.0",
+    "rollup-plugin-dts": "^2.0.1",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "typescript": "^4.1.5"
   },
   "dependencies": {
     "@abraham/reflection": "^0.7.0",
-    "rxjs": "^6.6.3",
     "tsyringe": "^4.4.0"
   }
 }
