--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,28 +12,34 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@altv/types-server": "^1.6.5",
+    "@altv/types-server": "^1.7.2",
     "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.19.0",
-    "@types/cors": "^2.8.9",
-    "@types/express": "^4.17.9",
-    "@types/fs-extra": "^9.0.5",
-    "@types/lodash": "^4.14.165",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/fs-extra": "^9.0.7",
+    "@types/lodash": "^4.14.168",
     "@types/sjcl": "^1.0.29",
-    "rimraf": "^3.0.2"
+    "builtin-modules": "^3.2.0",
+    "jscodeshift": "^0.11.0",
+    "rollup": "^2.39.0",
+    "rollup-plugin-auto-external": "^2.0.0",
+    "rollup-plugin-dts": "^2.0.1",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "typescript": "^4.1.5"
   },
   "dependencies": {
     "@abraham/reflection": "^0.7.0",
     "@overnightjs/core": "^1.7.5",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "discord.js": "^12.5.1",
-    "fs-extra": "^9.0.1",
+    "fs-extra": "^9.1.0",
     "lodash": "^4.17.20",
     "rxjs": "^6.6.3",
     "sjcl": "^1.0.8",
     "tsyringe": "^4.4.0",
-    "typeorm": "^0.2.29"
+    "typeorm": "^0.2.31"
   }
 }
