--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -12,8 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "rimraf": "^3.0.2",
-    "typescript": "^4.1.3"
+    "builtin-modules": "^3.2.0",
+    "rollup": "^2.39.0",
+    "rollup-plugin-auto-external": "^2.0.0",
+    "rollup-plugin-dts": "^2.0.1",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "typescript": "^4.1.5"
   },
   "dependencies": {
     "@abraham/reflection": "^0.7.0",
