--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -23,5 +23,8 @@
   "dependencies": {
     "@abraham/reflection": "^0.7.0",
     "tsyringe": "^4.4.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
