--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -23,5 +23,8 @@
     "@abraham/reflection": "^0.7.0",
     "rxjs": "^6.6.3",
     "tsyringe": "^4.4.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
