--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@abstractFlo/shared",
+  "name": "@abstractflo/shared",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -26,5 +26,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "56a02ed520eefd2e312dc74dfff4686edaa2fe9d"
 }
