--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@abraham/reflection": "^0.7.0",
+    "@abstractflo/shared": "^1.0.0",
     "tsyringe": "^4.4.0"
   },
   "publishConfig": {
