--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@abraham/reflection": "^0.7.0",
+    "@abstractflo/shared": "^1.0.0",
     "@overnightjs/core": "^1.7.5",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
