--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,7 +2,10 @@
   "name": "@abstractflo/shared",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/shared/index.js",
+  "files": [
+
+  ],
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
