--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@abstractflo/server",
-  "version": "1.0.5",
+  "name": "@abstractflo/atlas-server",
+  "version": "0.0.0",
   "description": "Project Atlas serverside framework part",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@abraham/reflection": "^0.7.0",
-    "@abstractflo/shared": "^1.0.5",
+    "@abstractflo/shared": "^1.0.7",
     "@overnightjs/core": "^1.7.5",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
