--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@abstractflo/shared",
-  "version": "1.0.5",
+  "name": "@abstractflo/atlas-shared",
+  "version": "0.0.0",
   "description": "Project Atlas shared framework part",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,7 +13,13 @@
   "author": "Florian Uhlrich <f.uhlrich@gmx.de>",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-typescript": "^8.2.0",
+    "@types/fs-extra": "^9.0.7",
     "builtin-modules": "^3.2.0",
+    "dotenv": "^8.2.0",
+    "fs-extra": "^9.1.0",
+    "jscodeshift": "^0.11.0",
     "rollup": "^2.39.0",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-dts": "^2.0.1",
