--- a/packages/atlas-shared/tsconfig.json
+++ b/packages/atlas-shared/tsconfig.json
@@ -2,8 +2,8 @@
   "extends": "../../tsconfig.json",
   "include": ["src"],
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "typings",
     "rootDir": "src",
-    "baseUrl": "."
+    "baseUrl": ".",
   }
 }
