--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,10 @@
     ],
     "rootDir": ".",
     "outDir": "dist",
-    "strict": true,
+    "strict": false,
     "removeComments": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
