--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,10 @@
       "es6",
       "esnext"
     ],
+    "typeRoots": [
+      "node_modules/@types",
+      "node_modules/@altv"
+    ],
     "rootDir": ".",
     "outDir": "dist",
     "strict": false,
