--- a/packages/atlas-shared/package.json
+++ b/packages/atlas-shared/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "description": "",
   "keywords": [],
-  "author": "Florian Uhlrich <florian.uhlrich@rsu-reifen.de>",
+  "author": "Florian Uhlrich <f.uhlrich@gmx.de>",
   "license": "ISC",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "resource-manager.js",
+    "resource-manager.d.ts"
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
