--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "exclude": [
     "node_modules",
-    "dist",
-    "lib",
-    "__tests__",
-    "**/*.spec"
+    "dist"
   ],
   "compilerOptions": {
     "skipLibCheck": false,
