--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postbuild": "npm run generate:typings",
     "build": "lerna run --parallel build",
     "generate:typings": "lerna run --parallel generate:typings",
-    "clean": "rimraf packages/*/{dist,resource-manager.js,resource-manager.d.ts,index.js,index.d.ts}"
+    "clean": "rimraf packages/*/{dist,resource-manager.js,resource-manager.d.ts}"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "@altv/types-client": "^1.5.2",
     "@altv/types-server": "^1.7.2",
     "@rollup/plugin-typescript": "^8.2.0",
+    "@types/node": "^8.0.0",
     "builtin-modules": "^3.2.0",
     "dts-bundle": "^0.7.3",
     "dts-bundle-generator": "^5.7.0",
