--- a/packages/atlas-server/package.json
+++ b/packages/atlas-server/package.json
@@ -2,8 +2,8 @@
   "name": "@abstractflo/atlas-server",
   "version": "0.0.0",
   "description": "",
+  "keywords": [],
   "author": "Florian Uhlrich <f.uhlrich@gmx.de>",
-  "homepage": "",
   "license": "ISC",
   "type": "module",
   "main": "dist/index.js",
@@ -15,12 +15,14 @@
   },
   "peerDependencies": {
     "@abraham/reflection": "^0.7.0",
-    "@abstractflo/atlas-shared": "0.0.0",
+    "@abstractflo/atlas-shared": "^0.0.0",
     "tsyringe": "^4.4.0"
   },
   "devDependencies": {
-    "@abstractflo/atlas-shared": "0.0.0",
+    "@abstractflo/atlas-shared": "^0.0.0",
+    "@altv/types-server": "^1.7.2",
     "@types/fs-extra": "^9.0.7",
+    "@types/node": "^14.14.31",
     "fs-extra": "^9.1.0",
     "tsyringe": "^4.4.0"
   }
