--- a/packages/atlas-server/tsconfig.typings.json
+++ b/packages/atlas-server/tsconfig.typings.json
@@ -1,9 +1,9 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "include": ["src"],
   "compilerOptions": {
     "outDir": "typings",
     "rootDir": "src",
-    "baseUrl": ".",
+    "baseUrl": "."
   }
 }
