--- a/packages/atlas-client/package.json
+++ b/packages/atlas-client/package.json
@@ -17,6 +17,7 @@
     "@abraham/reflection": "^0.7.0",
     "@abstractflo/atlas-shared": "^0.0.0",
     "@altv/types-client": "^1.5.2",
+    "rxjs": "^6.6.6",
     "tsyringe": "^4.4.0"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/fs-extra": "^9.0.7",
     "@types/node": "^14.14.31",
     "fs-extra": "^9.1.0",
+    "rxjs": "^6.6.6",
     "tsyringe": "^4.4.0"
   }
 }
