--- a/packages/atlas-server/package.json
+++ b/packages/atlas-server/package.json
@@ -8,6 +8,10 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "helpers.js",
+    "helpers.d.ts"
+  ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
     "build": "rollup -c",
@@ -15,7 +19,6 @@
   },
   "peerDependencies": {
     "@abraham/reflection": "^0.7.0",
-    "@abstractflo/atlas-shared": "^0.0.0",
     "rxjs": "^6.6.6",
     "tsyringe": "^4.4.0"
   },
@@ -23,8 +26,10 @@
     "@abstractflo/atlas-shared": "^0.0.0",
     "@altv/types-server": "^1.7.2",
     "@types/fs-extra": "^9.0.7",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.31",
     "fs-extra": "^9.1.0",
+    "lodash": "^4.17.21",
     "rxjs": "^6.6.6",
     "tsyringe": "^4.4.0"
   }
