--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "@altv/types-server": "^1.7.2",
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/node": "^8.0.0",
+    "@types/reflect-metadata": "^0.1.0",
     "builtin-modules": "^3.2.0",
     "dts-bundle": "^0.7.3",
     "dts-bundle-generator": "^5.7.0",
     "jscodeshift": "^0.11.0",
     "lerna": "^3.22.1",
     "npm-run-all": "^4.1.5",
+    "reflect-metadata": "^0.1.13",
     "rimraf": "^2.7.1",
     "rollup": "^2.39.1",
     "rollup-plugin-typescript2": "^0.30.0",
     "tsyringe": "^4.4.0",
+    "typeorm": "^0.2.31",
     "typescript": "^4.2.2"
   }
 }
