--- a/packages/atlas-server/package.json
+++ b/packages/atlas-server/package.json
@@ -20,7 +20,8 @@
   "peerDependencies": {
     "@abraham/reflection": "^0.7.0",
     "rxjs": "^6.6.6",
-    "tsyringe": "^4.4.0"
+    "tsyringe": "^4.4.0",
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@abstractflo/atlas-shared": "^0.0.0",
@@ -30,7 +31,9 @@
     "@types/node": "^14.14.31",
     "fs-extra": "^9.1.0",
     "lodash": "^4.17.21",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.6",
-    "tsyringe": "^4.4.0"
+    "tsyringe": "^4.4.0",
+    "typeorm": "^0.2.31"
   }
 }
