--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@altv/types-client": "^1.5.2",
     "@altv/types-server": "^1.7.2",
     "@rollup/plugin-typescript": "^8.2.0",
+    "@types/fs-extra": "^9.0.8",
     "@types/node": "^8.0.0",
     "@types/reflect-metadata": "^0.1.0",
     "builtin-modules": "^3.2.0",
     "dts-bundle": "^0.7.3",
     "dts-bundle-generator": "^5.7.0",
+    "fs-extra": "^8.1.0",
     "jscodeshift": "^0.11.0",
     "lerna": "^3.22.1",
     "npm-run-all": "^4.1.5",
