--- a/packages/atlas-shared/package.json
+++ b/packages/atlas-shared/package.json
@@ -25,6 +25,7 @@
 		"tsyringe": "^4.4.0"
 	},
 	"devDependencies": {
+		"@rollup/plugin-multi-entry": "^4.0.0",
 		"@rollup/plugin-node-resolve": "^11.2.0",
 		"@rollup/plugin-typescript": "^8.2.0",
 		"@types/fs-extra": "^9.0.7",
