--- a/packages/atlas-server/package.json
+++ b/packages/atlas-server/package.json
@@ -20,7 +20,8 @@
   "peerDependencies": {
     "@abraham/reflection": "^0.7.0",
     "rxjs": "^6.6.6",
-    "tsyringe": "^4.4.0"
+    "tsyringe": "^4.4.0",
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@abstractflo/atlas-shared": "^0.0.0",
@@ -28,9 +29,12 @@
     "@types/fs-extra": "^9.0.7",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.31",
+    "dotenv": "^8.2.0",
     "fs-extra": "^9.1.0",
     "lodash": "^4.17.21",
     "rxjs": "^6.6.6",
-    "tsyringe": "^4.4.0"
-  }
+    "tsyringe": "^4.4.0",
+    "typeorm": "^0.2.31"
+  },
+  "dependencies": {}
 }
