--- a/packages/atlas-server/tsconfig.typings.json
+++ b/packages/atlas-server/tsconfig.typings.json
@@ -1,9 +1,20 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "compilerOptions": {
+    "typeRoots": [
+      "node_modules/@types",
+      "node_modules/@altv"
+    ],
     "outDir": "typings",
     "rootDir": "src",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "reflect-metadata": [
+        "./"
+      ]
+    }
   }
 }
