--- a/packages/atlas-server/package.json
+++ b/packages/atlas-server/package.json
@@ -26,15 +26,20 @@
   "devDependencies": {
     "@abstractflo/atlas-shared": "^0.0.0",
     "@altv/types-server": "^1.7.2",
+    "@overnightjs/core": "^1.7.5",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
     "@types/fs-extra": "^9.0.7",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.31",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "fs-extra": "^9.1.0",
     "lodash": "^4.17.21",
     "rxjs": "^6.6.6",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.31"
-  },
-  "dependencies": {}
+  }
 }
