--- a/packages/atlas-server/package.json
+++ b/packages/atlas-server/package.json
@@ -35,6 +35,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "fs-extra": "^9.1.0",
     "lodash": "^4.17.21",
