--- a/packages/atlas-client/package.json
+++ b/packages/atlas-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@abstractflo/atlas-client",
-  "version": "0.0.0",
+  "version": "2.0.0-rc.1",
   "description": "",
   "keywords": [],
   "author": "Florian Uhlrich <f.uhlrich@gmx.de>",
@@ -24,7 +24,7 @@
     "tsyringe": "^4.4.0"
   },
   "devDependencies": {
-    "@abstractflo/atlas-shared": "^0.0.0",
+    "@abstractflo/atlas-shared": "^2.0.0-rc.1",
     "@types/fs-extra": "^9.0.7",
     "@types/node": "^14.14.31",
     "fs-extra": "^9.1.0",
