--- a/packages/atlas-shared/package.json
+++ b/packages/atlas-shared/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@abstractflo/atlas-shared",
-	"version": "0.0.0",
+	"version": "2.0.0-rc.1",
 	"description": "",
 	"keywords": [],
 	"author": "Florian Uhlrich <f.uhlrich@gmx.de>",
