--- a/packages/atlas-client/package.json
+++ b/packages/atlas-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@abstractflo/atlas-client",
-  "version": "2.0.0-rc.1",
+  "version": "2.0.0",
   "description": "",
   "keywords": [],
   "author": "Florian Uhlrich <f.uhlrich@gmx.de>",
@@ -10,7 +10,8 @@
   "types": "dist/index.d.ts",
   "files": [
     "helpers.js",
-    "helpers.d.ts"
+    "helpers.d.ts",
+    "dist/index.d.ts"
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
@@ -20,13 +21,18 @@
   "peerDependencies": {
     "@abraham/reflection": "^0.7.0",
     "@altv/types-client": "^1.5.2",
+    "@altv/types-natives": "^1.1.0",
     "rxjs": "^6.6.6",
     "tsyringe": "^4.4.0"
   },
   "devDependencies": {
-    "@abstractflo/atlas-shared": "^2.0.0-rc.1",
     "@types/fs-extra": "^9.0.7",
-    "@types/node": "^14.14.31",
+    "@types/node": "^14.14.31"
+  },
+  "dependencies": {
+    "@abstractflo/atlas-shared": "^2.0.0",
+    "@altv/types-client": "^1.5.2",
+    "@altv/types-natives": "^1.1.0",
     "fs-extra": "^9.1.0",
     "rxjs": "^6.6.6",
     "tsyringe": "^4.4.0"
