--- a/packages/atlas-server/package.json
+++ b/packages/atlas-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@abstractflo/atlas-server",
-  "version": "2.0.0-rc.1",
+  "version": "2.0.0",
   "description": "",
   "keywords": [],
   "author": "Florian Uhlrich <f.uhlrich@gmx.de>",
@@ -10,7 +10,8 @@
   "types": "dist/index.d.ts",
   "files": [
     "helpers.js",
-    "helpers.d.ts"
+    "helpers.d.ts",
+    "dist/index.d.ts"
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
@@ -19,19 +20,22 @@
   },
   "peerDependencies": {
     "@abraham/reflection": "^0.7.0",
+    "@altv/types-server": "^1.7.2",
     "rxjs": "^6.6.6",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.31"
   },
   "devDependencies": {
-    "@abstractflo/atlas-shared": "^2.0.0-rc.1",
-    "@altv/types-server": "^1.7.2",
-    "@overnightjs/core": "^1.7.5",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/fs-extra": "^9.0.7",
     "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.31",
+    "@types/node": "^14.14.31"
+  },
+  "dependencies": {
+    "@abstractflo/atlas-shared": "^2.0.0",
+    "@altv/types-server": "^1.7.2",
+    "@overnightjs/core": "^1.7.5",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
