--- a/packages/atlas-shared/package.json
+++ b/packages/atlas-shared/package.json
@@ -1,44 +1,48 @@
 {
-	"name": "@abstractflo/atlas-shared",
-	"version": "2.0.0-rc.1",
-	"description": "",
-	"keywords": [],
-	"author": "Florian Uhlrich <f.uhlrich@gmx.de>",
-	"license": "ISC",
-	"type": "module",
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"files": [
-		"resource-manager.js",
-		"resource-manager.d.ts",
-		"helpers.js",
-		"helpers.d.ts"
-	],
-	"scripts": {
-		"test": "echo \"Error: run tests from root\" && exit 1",
-		"build": "rollup -c",
-		"generate:typings": "dts-bundle-generator --config dts-generator.cjs"
-	},
-	"peerDependencies": {
-		"@abraham/reflection": "^0.7.0",
-		"rxjs": "^6.6.6",
-		"tsyringe": "^4.4.0"
-	},
-	"devDependencies": {
-		"@rollup/plugin-multi-entry": "^4.0.0",
-		"@rollup/plugin-node-resolve": "^11.2.0",
-		"@rollup/plugin-typescript": "^8.2.0",
-		"@types/fs-extra": "^9.0.7",
-		"@types/jscodeshift": "^0.11.0",
-		"@types/node": "^14.14.31",
-		"dotenv": "^8.2.0",
-		"fs-extra": "^9.1.0",
-		"jscodeshift": "^0.11.0",
-		"rollup": "^2.39.1",
-		"rollup-plugin-auto-external": "^2.0.0",
-		"rollup-plugin-commonjs": "^10.1.0",
-		"rollup-plugin-terser": "^7.0.2",
-		"rxjs": "^6.6.6",
-		"tsyringe": "^4.4.0"
-	}
+  "name": "@abstractflo/atlas-shared",
+  "version": "2.0.0",
+  "description": "",
+  "keywords": [],
+  "author": "Florian Uhlrich <f.uhlrich@gmx.de>",
+  "license": "ISC",
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "resource-manager.js",
+    "resource-manager.d.ts",
+    "helpers.js",
+    "helpers.d.ts",
+    "dist/index.d.ts"
+  ],
+  "scripts": {
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "build": "rollup -c",
+    "generate:typings": "dts-bundle-generator --config dts-generator.cjs"
+  },
+  "peerDependencies": {
+    "@abraham/reflection": "^0.7.0",
+    "rxjs": "^6.6.6",
+    "tsyringe": "^4.4.0"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^9.0.7",
+    "@types/jscodeshift": "^0.11.0",
+    "@types/node": "^14.14.31"
+  },
+  "dependencies": {
+    "@abraham/reflection": "^0.7.0",
+    "@rollup/plugin-multi-entry": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-typescript": "^8.2.0",
+    "dotenv": "^8.2.0",
+    "fs-extra": "^9.1.0",
+    "jscodeshift": "^0.11.0",
+    "rollup": "^2.39.1",
+    "rollup-plugin-auto-external": "^2.0.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rxjs": "^6.6.6",
+    "tsyringe": "^4.4.0"
+  }
 }
