--- a/packages/atlas-server/package.json
+++ b/packages/atlas-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@abstractflo/atlas-server",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "",
   "keywords": [],
   "author": "Florian Uhlrich <f.uhlrich@gmx.de>",
@@ -30,10 +30,11 @@
     "@types/express": "^4.17.11",
     "@types/fs-extra": "^9.0.7",
     "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.31"
+    "@types/node": "^14.14.31",
+    "@types/sjcl": "^1.0.29"
   },
   "dependencies": {
-    "@abstractflo/atlas-shared": "^2.0.0",
+    "@abstractflo/atlas-shared": "^2.0.1",
     "@altv/types-server": "^1.7.2",
     "@overnightjs/core": "^1.7.5",
     "axios": "^0.21.1",
@@ -44,6 +45,7 @@
     "fs-extra": "^9.1.0",
     "lodash": "^4.17.21",
     "rxjs": "^6.6.6",
+    "sjcl": "^1.0.8",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.31"
   }
