Fix webview, colshape and player extends declaration

--- a/packages/atlas-server/tsconfig.typings.json
+++ b/packages/atlas-server/tsconfig.typings.json
@@ -10,11 +10,6 @@
     ],
     "outDir": "typings",
     "rootDir": "src",
-    "baseUrl": ".",
-    "paths": {
-      "reflect-metadata": [
-        "./"
-      ]
-    }
+    "baseUrl": "."
   }
 }
