--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,8 +24,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
-    "importHelpers": false,
-    "esModuleInterop": false,
+    "importHelpers": true,
+    "esModuleInterop": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "emitDecoratorMetadata": true,
