--- a/packages/atlas-shared/package.json
+++ b/packages/atlas-shared/package.json
@@ -26,6 +26,7 @@
     "tsyringe": "^4.5.0"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
     "@types/fs-extra": "^9.0.11",
     "@types/jscodeshift": "^0.11.0",
     "@types/node": "^15.0.2"
