--- a/packages/atlas-shared/package.json
+++ b/packages/atlas-shared/package.json
@@ -22,7 +22,7 @@
   },
   "peerDependencies": {
     "@abraham/reflection": "^0.8.0",
-    "rxjs": "^7.0.1",
+    "rxjs": "^6.6.7",
     "tsyringe": "^4.5.0"
   },
   "devDependencies": {
@@ -43,7 +43,7 @@
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rxjs": "^6.6.7",
-    "tsyringe": "^4.5.0"
+    "tsyringe": "^4.5.0",
+    "rxjs": "^6.6.7"
   }
 }
