--- a/packages/atlas-server/tsconfig.typings.json
+++ b/packages/atlas-server/tsconfig.typings.json
@@ -1,13 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "compilerOptions": {
-    "typeRoots": [
-      "node_modules/@types",
-      "node_modules/@altv"
-    ],
+    "typeRoots": ["node_modules/@types", "node_modules/@altv"],
     "outDir": "typings",
     "rootDir": "src",
     "baseUrl": "."
