--- a/packages/atlas-client/package.json
+++ b/packages/atlas-client/package.json
@@ -22,7 +22,7 @@
     "@abraham/reflection": "^0.8.0",
     "@altv/types-client": "^1.5.6",
     "@altv/types-natives": "^1.3.0",
-    "rxjs": "^7.0.1",
+    "rxjs": "^6.6.7",
     "tsyringe": "^4.5.0"
   },
   "devDependencies": {
@@ -34,7 +34,7 @@
     "@altv/types-client": "^1.5.6",
     "@altv/types-natives": "^1.3.0",
     "fs-extra": "^10.0.0",
-    "rxjs": "^6.6.7",
-    "tsyringe": "^4.5.0"
+    "tsyringe": "^4.5.0",
+    "rxjs": "^6.6.7"
   }
 }
