--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.1",
     "pretty-quick": "^3.1.0",
-    "reflect-metadata": "^0.1.rxj",
+    "reflect-metadata": "^0.1.13",
     "rimraf": "^2.7.1",
     "rollup": "^2.39.1",
     "rollup-plugin-typescript2": "^0.30.0",
