remove mjs extension from format script

--- a/packages/atlas-shared/package.json
+++ b/packages/atlas-shared/package.json
@@ -19,7 +19,7 @@
     "test": "echo \"Error: run tests from root\" && exit 1",
     "build": "rollup -c",
     "generate:typings": "dts-bundle-generator --config dts-generator.cjs",
-    "lint": "eslint src --ext mjs,ts"
+    "lint": "eslint src --ext ts"
   },
   "peerDependencies": {
     "@abraham/reflection": "^0.8.0",
