--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "generate:typings": "lerna run generate:typings",
     "clean": "rimraf packages/*/{dist,resource-manager.js,resource-manager.d.ts,helpers.js,helpers.d.ts}",
     "publish": "lerna publish --no-git-tag-version --no-push --skip-npm --force-publish * --yes && lerna exec -- npm publish",
-    "format": "prettier --write packages/**/src/**/*.{mjs,ts,js}",
+    "format": "prettier --write packages/**/src/**/*.{ts,js}",
     "lint": "lerna run lint"
   },
   "keywords": [],
