remove mjs extension from tsconfig

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,10 +1,4 @@
 {
   "extends": "./tsconfig.base.json",
-  "include": [
-    "packages/**/*.mjs",
-    "packages/**/*.cjs",
-    "packages/**/*.ts",
-    "packages/**/rollup.config.js",
-    "packages/**/dts-generator.cjs"
-  ]
+  "include": ["packages/**/*.cjs", "packages/**/*.ts", "packages/**/rollup.config.js", "packages/**/dts-generator.cjs"]
 }
