--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -27,6 +27,7 @@
     "@types/yargs": "^17.0.2"
   },
   "dependencies": {
+    "cfg-reader": "^1.4.0",
     "colorette": "^1.2.2",
     "pretty-ms": "^7.0.1",
     "rollup": "2.52.7",
