--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "main": "dist/atlas-cli.js",
   "files": [
-    "dist/*"
+    "dist/*",
+    "stubs/*"
   ],
   "bin": {
     "atlas": "dist/atlas-cli.js"
