--- a/packages/core/devtools/package.json
+++ b/packages/core/devtools/package.json
@@ -38,11 +38,13 @@
     "ejs": "^3.1.6",
     "fs-jetpack": "^4.1.0",
     "import-meta-resolve": "^1.1.1",
+    "js-yaml": "^4.1.0",
     "jscodeshift": "^0.13.0",
     "rollup": "2.52.7",
     "rollup-plugin-swc": "leonardssh/rollup-plugin-swc#build"
   },
   "devDependencies": {
-    "@types/ejs": "^3.0.7"
+    "@types/ejs": "^3.0.7",
+    "@types/js-yaml": "^4.0.2"
   }
 }
