--- a/packages/core/devtools/package.json
+++ b/packages/core/devtools/package.json
@@ -31,7 +31,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.2",
     "@swc/core": "^1.2.64",
-    "cfg-reader": "^1.4.0",
+    "cfg-reader": "^2.0.0-rc8",
     "change-case": "^4.1.2",
     "colorette": "^1.2.2",
     "dotenv": "^10.0.0",
