--- a/packages/core/server/package.json
+++ b/packages/core/server/package.json
@@ -23,7 +23,7 @@
     "build": "rollup -c",
     "watch": "rollup -cw",
     "clean": "rimraf {dist,build,types,*.d.ts,*.tgz}",
-    "types": "dts-bundle-generator -o dist/index.d.ts src/index.ts",
+    "types": "dts-bundle-generator -o dist/index.d.ts src/index.ts --inline-declare-externals --sort --no-check",
     "local:pack": "yarn pack --filename server.tgz"
   },
   "peerDependencies": {
