--- a/packages/core/shared/package.json
+++ b/packages/core/shared/package.json
@@ -28,8 +28,11 @@
   },
   "dependencies": {
     "@abraham/reflection": "^0.8.0",
+    "@rollup/plugin-typescript": "^8.2.3",
     "rxjs": "^7.2.0",
-    "tsyringe": "^4.6.0"
+    "tslib": "^2.3.0",
+    "tsyringe": "^4.6.0",
+    "typescript": "^4.3.5"
   },
   "peerDependencies": {
     "@altv/types-shared": "^1.0.1"
