--- a/packages/core/devtools/package.json
+++ b/packages/core/devtools/package.json
@@ -43,6 +43,7 @@
     "jscodeshift": "^0.13.0",
     "rollup": "2.52.7",
     "rollup-plugin-swc": "leonardssh/rollup-plugin-swc#build",
+    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.3.0",
     "typescript": "^4.3.5"
   },
