--- a/packages/plugins/typeorm/package.json
+++ b/packages/plugins/typeorm/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "package-name",
-  "version": "0.0.0",
+  "name": "@abstractflo/atlas-plugin-typeorm",
+  "version": "1.0.0",
   "description": "> TODO: description",
   "author": "Florian Uhlrich <f.uhlrich@abstractmedia.de>",
   "homepage": "",
@@ -17,12 +17,22 @@
     "import": "./dist/index.esm.js"
   },
   "scripts": {
-    "prebuild": "yarn clean && yarn types",
+    "prebuild": "yarn clean",
+    "postbuild": "yarn types && yarn local:pack",
     "prewatch": "yarn clean",
     "build": "rollup -c",
     "watch": "rollup -cw",
     "clean": "rimraf {dist,build,types,*.d.ts,*.tgz}",
     "types": "dts-bundle-generator -o dist/index.d.ts src/index.ts",
-    "local:pack": "yarn pack --filename package-name.tgz"
+    "local:pack": "yarn pack --filename plugin-typeorm.tgz"
+  },
+  "peerDependencies": {
+    "@abstractflo/atlas-shared": "^3.1.0"
+  },
+  "devDependencies": {
+    "@abstractflo/atlas-shared": "*"
+  },
+  "dependencies": {
+    "typeorm": "^0.2.36"
   }
 }
