--- a/packages/plugins/typeorm/tsconfig.json
+++ b/packages/plugins/typeorm/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../../tsconfig.json",
   "compilerOptions": {
     "outDir": "build",
+    "skipLibCheck": true
   },
   "include": [
     "src"
