--- a/packages/core/devtools/package.json
+++ b/packages/core/devtools/package.json
@@ -36,6 +36,7 @@
     "change-case": "^4.1.2",
     "colorette": "^1.2.2",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "fs-jetpack": "^4.1.0",
     "import-meta-resolve": "^1.1.1",
     "js-yaml": "^4.1.0",
