--- a/packages/plugins/discord/package.json
+++ b/packages/plugins/discord/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@abstractflo/atlas-server",
-  "version": "3.1.0",
+  "name": "@abstractflo/atlas-plugin-discord",
+  "version": "1.0.0",
   "description": "> TODO: description",
   "author": "Florian Uhlrich <f.uhlrich@abstractmedia.de>",
   "homepage": "",
@@ -23,18 +23,19 @@
     "build": "rollup -c",
     "watch": "rollup -cw",
     "clean": "rimraf {dist,build,types,*.d.ts,*.tgz}",
-    "types": "dts-bundle-generator -o dist/index.d.ts src/index.ts --inline-declare-externals --sort --no-check",
-    "local:pack": "yarn pack --filename server.tgz"
+    "types": "dts-bundle-generator -o dist/index.d.ts src/index.ts",
+    "local:pack": "yarn pack --filename plugin-discord.tgz"
   },
   "peerDependencies": {
-    "@abstractflo/atlas-shared": "^3.1.0",
-    "@altv/types-server": "^1.9.7"
+    "@abstractflo/atlas-shared": "^3.1.0"
   },
   "devDependencies": {
-    "@abstractflo/atlas-shared": "*",
-    "@altv/types-server": "*"
+    "@abstractflo/atlas-shared": "*"
   },
   "dependencies": {
-    "dotenv": "^10.0.0"
+    "@overnightjs/core": "^1.7.6",
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "discord.js": "^12.5.3"
   }
 }
