--- a/packages/plugins/typeorm/package.json
+++ b/packages/plugins/typeorm/package.json
@@ -27,10 +27,12 @@
     "local:pack": "yarn pack --filename plugin-typeorm.tgz"
   },
   "peerDependencies": {
-    "@abstractflo/atlas-shared": "^3.1.0"
+    "@abstractflo/atlas-shared": "^3.1.0",
+    "@abstractflo/atlas-devtools": "^3.1.0"
   },
   "devDependencies": {
-    "@abstractflo/atlas-shared": "*"
+    "@abstractflo/atlas-shared": "*",
+    "@abstractflo/atlas-devtools": "*"
   },
   "dependencies": {
     "typeorm": "^0.2.36"
