--- a/packages/plugins/discord/tsconfig.json
+++ b/packages/plugins/discord/tsconfig.json
@@ -2,6 +2,11 @@
   "extends": "../../../tsconfig.json",
   "compilerOptions": {
     "outDir": "build",
+    "lib": [
+      "es6",
+      "esnext",
+      "dom"
+    ]
   },
   "include": [
     "src"
