--- a/packages/plugins/discord/package.json
+++ b/packages/plugins/discord/package.json
@@ -27,10 +27,12 @@
     "local:pack": "yarn pack --filename plugin-discord.tgz"
   },
   "peerDependencies": {
+    "@abstractflo/atlas-server": "^3.1.0",
     "@abstractflo/atlas-shared": "^3.1.0",
     "eris": "^0.15.1"
   },
   "devDependencies": {
+    "@abstractflo/atlas-server": "*",
     "@abstractflo/atlas-shared": "*",
     "@types/node": "^16.4.13",
     "@types/ws": "^7.4.7",
@@ -39,6 +41,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cors": "^2.8.5",
-    "fastify": "^3.20.1"
+    "fastify": "^3.20.1",
+    "rxjs": "^7.3.0"
   }
 }
