--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,9 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["packages/**/*.cjs", "packages/**/*.ts", "packages/**/rollup.config.js", "packages/**/dts-generator.cjs"]
+  "include": [
+    "packages/**/*.cjs",
+    "packages/**/*.ts",
+    "packages/**/rollup.config.js",
+    "packages/**/dts-generator.cjs"
+  ]
 }
