--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,9 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "extraFileExtensions": [".cjs"],
+    "extraFileExtensions": [
+      ".cjs"
+    ],
     "project": "./tsconfig.eslint.json",
     "sourceType": "module",
     "ecmaVersion": 2020
