--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "packages/plugins/*"
   ],
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.18.4",
     "@rollup/plugin-typescript": "^8.2.3",
     "@swc/core": "^1.2.64",
     "@types/node": "^16.3.3",
@@ -26,6 +27,7 @@
     "rimraf": "^3.0.2",
     "rollup": "2.52.7",
     "rollup-plugin-swc": "leonardssh/rollup-plugin-swc#build",
+    "rollup-plugin-typescript2": "^0.30.0",
     "tslib": "^2.3.0",
     "typescript": "^4.3.5"
   },
