--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -15,13 +15,13 @@
     "atlas": "dist/atlas-cli.js"
   },
   "scripts": {
-    "prebuild": "yarn clean && yarn types",
-    "postbuild": "yarn local:pack",
-    "prewatch": "yarn clean",
+    "prebuild": "yarn clean",
     "build": "rollup -c",
+    "postbuild": "yarn local:pack && yarn types && rimraf ./dist/packages",
+    "prewatch": "yarn clean",
     "watch": "rollup -cw",
     "clean": "rimraf {dist,build,types,*.d.ts,*.tgz}",
-    "types": "dts-bundle-generator -o dist/index.d.ts src/atlas-cli.ts",
+    "types": "api-extractor run --local --verbose",
     "local:pack": "yarn pack --filename cli.tgz"
   },
   "devDependencies": {
