--- a/package.json
+++ b/package.json
@@ -17,27 +17,14 @@
     "@swc/core": "^1.2.64",
     "@types/node": "^16.3.3",
     "@typescript-eslint/parser": "^4.28.3",
-    "builtin-modules": "^3.2.0",
-    "dts-bundle-generator": "^5.9.0",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "lerna": "^4.0.0",
+    "microbundle": "^0.13.3",
+    "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "rollup": "2.52.7",
-    "rollup-plugin-swc": "leonardssh/rollup-plugin-swc#build",
-    "rollup-plugin-typescript2": "^0.30.0",
     "tslib": "^2.3.0",
     "typescript": "^4.3.5"
-  },
-  "prettier": {
-    "$schema": "http://json.schemastore.org/prettierrc",
-    "tabWidth": 2,
-    "useTabs": false,
-    "printWidth": 140,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "bracketSpacing": true,
-    "quoteProps": "as-needed"
   }
 }
