--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -5,6 +5,7 @@
   "author": "Florian Uhlrich <f.uhlrich@abstractmedia.de>",
   "homepage": "",
   "license": "MIT",
+  "source": "src/atlas-cli.ts",
   "main": "dist/atlas-cli.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -16,10 +17,10 @@
   },
   "scripts": {
     "prebuild": "yarn clean",
-    "build": "rollup -c",
+    "build": "microbundle --no-sourcemap --format=cjs,esm --no-compress",
     "postbuild": "yarn types && rimraf ./dist/packages && yarn local:pack",
     "prewatch": "yarn clean",
-    "watch": "rollup -cw",
+    "watch": "microbundle watch --no-sourcemap --format=cjs,esm --no-compress",
     "clean": "rimraf {dist,build,types,*.d.ts,*.tgz}",
     "types": "api-extractor run --local --verbose",
     "local:pack": "yarn pack --filename cli.tgz"
