--- a/packages/core/devtools/package.json
+++ b/packages/core/devtools/package.json
@@ -18,19 +18,16 @@
   },
   "scripts": {
     "prebuild": "yarn clean",
-    "build": "rollup -c",
+    "build": "microbundle --no-sourcemap --format=cjs,esm --no-compress",
     "postbuild": "yarn types && rimraf ./dist/packages && yarn local:pack",
     "prewatch": "yarn clean",
-    "watch": "rollup -cw",
+    "watch": "microbundle watch --no-sourcemap --format=cjs,esm --no-compress",
     "clean": "rimraf {dist,build,types,*.d.ts,*.tgz}",
     "types": "api-extractor run --local --verbose",
     "local:pack": "yarn pack --filename devtools.tgz"
   },
   "dependencies": {
     "@abraham/reflection": "^0.8.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.2",
-    "@rollup/plugin-typescript": "^8.2.3",
     "@swc/core": "^1.2.64",
     "cfg-reader": "^2.0.0",
     "change-case": "^4.1.2",
@@ -41,16 +38,12 @@
     "import-meta-resolve": "^1.1.1",
     "js-yaml": "^4.1.0",
     "jscodeshift": "^0.13.0",
-    "lodash": "^4.17.21",
-    "rollup": "2.52.7",
-    "rollup-plugin-swc": "leonardssh/rollup-plugin-swc#build",
-    "rollup-plugin-terser": "^7.0.2",
+    "microbundle": "^0.13.3",
     "tslib": "^2.3.0",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/ejs": "^3.0.7",
-    "@types/js-yaml": "^4.0.2",
-    "@types/lodash": "^4.14.172"
+    "@types/js-yaml": "^4.0.2"
   }
 }
