--- a/packages/core/devtools/package.json
+++ b/packages/core/devtools/package.json
@@ -7,14 +7,14 @@
   "license": "MIT",
   "type": "commonjs",
   "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "module": "dist/index.esm.mjs",
   "types": "dist/index.d.ts",
   "files": [
     "dist/*"
   ],
   "exports": {
     "require": "./dist/index.js",
-    "import": "./dist/index.esm.js"
+    "import": "./dist/index.esm.mjs"
   },
   "scripts": {
     "prebuild": "yarn clean",
